--- a/fixtures/media-chrome/index.html
+++ b/fixtures/media-chrome/index.html
@@ -28,9 +28,8 @@
       }
     </script>
     <script type="module" src="./superstreamer-video-element.js"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/youtube-video-element@1.1/+esm"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/media-chrome/+esm"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/media-chrome/dist/experimental/+esm"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/media-chrome/menu/+esm"></script>
 
     <media-controller>
       <superstreamer-video  
@@ -38,6 +37,7 @@
         src="https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8">
       </superstreamer-video>
       <media-loading-indicator slot="centered-chrome" no-auto-hide></media-loading-indicator>
+      <media-rendition-menu hidden anchor="auto"></media-rendition-menu>
       <media-control-bar>
         <media-play-button></media-play-button>
         <media-seek-forward-button ></media-seek-forward-button>
@@ -45,8 +45,7 @@
         <media-volume-range></media-volume-range>
         <media-time-range></media-time-range>
         <media-time-display show-duration></media-time-display>
-        <media-captions-selectmenu default-showing></media-captions-selectmenu>
-        <media-rendition-selectmenu></media-rendition-selectmenu>
+        <media-rendition-menu-button></media-rendition-menu-button>
         <media-fullscreen-button></media-fullscreen-button>
       </media-control-bar>
     </media-controller>
