--- a/fixtures/media-chrome/index.html
+++ b/fixtures/media-chrome/index.html
@@ -34,7 +34,7 @@
     <media-controller>
       <superstreamer-video  
         slot="media"
-        src="http://localhost:52002/session/0e4ed631-2fff-4458-af23-0419f7a9cc20/master.m3u8">
+        src="https://stitcher.superstreamer.xyz/session/973d40ca-e7e2-4562-b482-767bc67a9069/master.m3u8">
       </superstreamer-video>
       <media-loading-indicator slot="centered-chrome" no-auto-hide></media-loading-indicator>
       <media-rendition-menu hidden anchor="auto"></media-rendition-menu>
