Added temp code

--- a/fixtures/media-chrome/index.html
+++ b/fixtures/media-chrome/index.html
@@ -39,6 +39,7 @@
       <media-loading-indicator slot="centered-chrome" no-auto-hide></media-loading-indicator>
       <media-rendition-menu hidden anchor="auto"></media-rendition-menu>
       <media-audio-track-menu hidden anchor="auto"></media-audio-track-menu>
+      <media-captions-menu hidden anchor="auto"></media-captions-menu>
       <media-control-bar>
         <media-play-button></media-play-button>
         <media-seek-forward-button></media-seek-forward-button>
@@ -48,6 +49,7 @@
         <media-time-display show-duration></media-time-display>
         <media-rendition-menu-button></media-rendition-menu-button>
         <media-audio-track-menu-button></media-audio-track-menu-button>
+        <media-captions-menu-button></media-captions-menu-button>
         <media-fullscreen-button></media-fullscreen-button>
       </media-control-bar>
     </media-controller>
