--- a/fixtures/media-chrome/index.html
+++ b/fixtures/media-chrome/index.html
@@ -36,7 +36,7 @@
         slot="media"
         src="https://stitcher.superstreamer.xyz/session/8121e4cc-2024-45b5-bfc8-323dec368819/master.m3u8">
       </superstreamer-video>
-      <media-loading-indicator slot="centered-chrome" no-auto-hide></media-loading-indicator>
+      <media-loading-indicator slot="centered-chrome" noautohide></media-loading-indicator>
       <media-rendition-menu hidden anchor="auto"></media-rendition-menu>
       <media-audio-track-menu hidden anchor="auto"></media-audio-track-menu>
       <media-captions-menu hidden anchor="auto"></media-captions-menu>
@@ -46,7 +46,7 @@
         <media-mute-button></media-mute-button>
         <media-volume-range></media-volume-range>
         <media-time-range></media-time-range>
-        <media-time-display show-duration></media-time-display>
+        <media-time-display showduration></media-time-display>
         <media-rendition-menu-button></media-rendition-menu-button>
         <media-audio-track-menu-button></media-audio-track-menu-button>
         <media-captions-menu-button></media-captions-menu-button>
